--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Validasi Form dengan JQuery Validation - Achmatim.Net</title>
+		<title>Form Validation menggunakan Jquery</title>
 		<style type="text/css">
 		.labelfrm {
 			display:block;
